[package]
name = "terminable_threads"
version = "0.1.0"
edition = "2021"
description = "Basic Terminable Thread Managers"
license-file = "LICENSE"
keywords = ["threads", "threading"]
repository = "https://github.com/Ross-Morgan/terminable_threads"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
