[package]
name = "terminable_threads"
version = "0.2.1"
edition = "2021"
description = "Basic Terminable Thread Manager"
license-file = "LICENSE"
keywords = ["threads", "threading"]
repository = "https://github.com/Ross-Morgan/terminable_threads"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
